2008-01-06  Brian Matherly <brian@gramps-project.org>
            Raphael Ackermann <raphael.ackermann@gmail.com>
            James Friedmann <jfriedmannj@gmail.com>
	* src/ReportBase/_ReportUtils.py:
	* src/plugins/DetDescendantReport.py:
	* src/plugins/DetAncestralReport.py:
	0001408: Low Verbosity / Succinct option for the Detailed 
	Ancestral/Descendant Reports (patch from James Friedmann modified by 
	Raphael Ackermann and Brian Matherly)

2008-01-05  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/plugins/Verify.py:
	Patch from Raphael Ackermann
	Fix 0001505: Verifying database signals dead father, when he is not a father.

2008-01-05  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_ReportDialog.py:
	* src/ReportBase/_BareReportDialog.py:
	* src/ReportBase/_ReportOptions.py:
	* src/plugins/KinshipReport.py:
	* src/plugins/DetDescendantReport.py:
	* src/plugins/DescendReport.py:
	* src/plugins/IndivComplete.py:
	* src/plugins/CalculateEstimatedDates.py:
	* src/plugins/BookReport.py:
	* src/plugins/TimeLine.py:
	* src/plugins/GVFamilyLines.py:
	* src/plugins/Calendar.py:
	* src/plugins/AncestorReport.py:
	* src/plugins/MarkerReport.py:
	* src/plugins/DescendChart.py:
	* src/plugins/EndOfLineReport.py:
	* src/plugins/DetAncestralReport.py:
	* src/plugins/SimpleBookTitle.py:
	* src/plugins/CustomBookText.py:
	* src/plugins/FamilyGroup.py:
	* src/plugins/GVRelGraph.py:
	* src/plugins/GVHourGlass.py:
	* src/plugins/StatisticsChart.py:
	* src/plugins/FanChart.py:
	* src/PluginUtils/_PluginWindows.py:
	* src/PluginUtils/__init__.py:
	* src/PluginUtils/_MenuOptions.py:
	More refactoring in the report system. More reports use MenuOptions now.
	BareReportDialog no longer has "center person".

2008-01-05  Raphael Ackermann <raphael.ackermann@gmail.com>
2008-01-05  Brian Matherly <brian@gramps-project.org>
	* src/DataViews/PedigreeView.py:
	* src/Config/__init__.py:
	* src/gen/utils/longop.py:
	* src/Editors/_EditLocation.py: